<resources>
    <string name="app_name">Savdhaan</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="notregister">Not Register?</string>
    <string name="save">save</string>
    <string name="title_activity_maps">Map</string>
    <string name="retrive">retrive</string>
    <string name="getlocation">GetLocation</string>
    <string name="locationdisplay">LocationDisplay</string>
</resources>
