<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/bg">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:text="LOGIN"
        android:textSize="@android:dimen/app_icon_size"/>
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="15dp" />
    <EditText
        android:id="@+id/editText3" android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock_open_black_24dp"
        android:hint="@string/password"
        android:drawablePadding="15dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#D4E251"
        android:text="@string/login" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/notregister"/>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/register"
            android:paddingLeft="10dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>


</LinearLayout>